tests/baselines/reference/jsdocResolveNameFailureInTypedef.errors.txt
/a.js(7,14): error TS2304: Cannot find name 'CantResolveThis'.


==== /a.js (1 errors) ====
    /**
     * @param {Ty} x
     */
    function f(x) {}
    
    /**
     * @typedef {CantResolveThis} Ty
                 ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CantResolveThis'.
     */
    